--- a/app/static/style/src/base/_base.scss
+++ b/app/static/style/src/base/_base.scss
@@ -41,10 +41,10 @@ body {
 h1 {}
 
 .head__h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   hyphens: initial;
 
-  @include query(m) {
+  @include query(s) {
     font-size: 4rem;
   }
 }
