Add comments option val to exhibition select

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -224,6 +224,7 @@
 		<option value="name">Exhibition Name</option>
 		<option value="start_date">Start Date</option>
 		<option value="end_date">End Date</option>
+		<option value="comments">Comments</option>
 		<option value="orgs">Org</option>
 		<option value="artworks">Artwork*</option>
 		<option value="parks">Park*</option>
