--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -47,7 +47,7 @@
 								{{ form.username.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ form.username(class="form-control", placeholder=form.username.label.text) }}
+								{{ form.username(class="input--attr form-control", placeholder=form.username.label.text) }}
 							</div>
 						</li>
 
@@ -56,7 +56,7 @@
 								{{ form.password.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ form.password(class="form-control", placeholder=form.password.label.text) }}
+								{{ form.password(class="input--attr form-control", placeholder=form.password.label.text) }}
 							</div>
 						</li>
 
