Change active exhibitions date format
Replace start date li and end date li w/ exhibition dates li

--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -46,23 +46,22 @@
 	<section id="section--active">
 		<div class="chunk [ row justify-content-center py-5 ]">
 			<div class="[ col-md-8 ]">
-		
+
 				<h2 class="[ display-4 py-4 ]">Active Exhibitions</h2>
-		
+
 				{% for exhibition in active_exhibitions %}
-		
+
 					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
 					<ul class="[ list-unstyled p-0 ]">
-						<li>Start date: {{ exhibition.start_date }}</li>
-						<li>End date: {{ exhibition.end_date }}</li>
+						<li>Exhibition Dates: {{ exhibition.start_date|date_format }} to {{ exhibition.end_date|date_format }}</li>
 					</ul>
-		
+
 				{% else %}
-		
+
 					<p><i>There are no active exhibitions right now.</i></p>
-		
+
 				{% endfor %}
-		
+
 			</div>
 		</div>
 	</section>
