Remove default exhibition.comments value ref

--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -82,7 +82,7 @@
 							<div class="[ col-md-3 ]">{{ form.comments.label }}</div>
 							<div class="[ col-10 col-md-9 col-lg-7 ]">
 								<p class="is-active [ m-0 ]">{{ exhibition.comments }}</p>
-								{{ form.comments(class="form-control-plaintext input--attr d-none", value=exhibition.comments, readonly=true, disabled=true) }}
+								{{ form.comments(class="form-control-plaintext input--attr d-none", readonly=true, disabled=true) }}
 							</div>
 						</li>
 
