--- a/app/templates/parks.html
+++ b/app/templates/parks.html
@@ -174,16 +174,18 @@
 
 				<h2 class="[ display-4 py-4 ]">Parks</h2>
 
-				{%- for park in parks -%}
-					<h3 class="indent [ pt-3 ]">
-						<a href="{{ url_for('park', id=park.id) }}">{{ park.name }}</a>
-						{%- for exhibition in park.exhibitions -%}
-							{{ " (" if loop.first }}<a href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a>{{ " / " if not loop.last else ")" }}
-						{%- endfor -%}
-					</h3>
-				{%- else -%}
-					<p><i>There are no parks in the database.</i></p>
-				{%- endfor -%}
+				<div class="">
+					{%- for park in parks -%}
+						<h3 class="indent {{ 'js-index_' ~ park.name[0]|lower if park.name[0].isalpha() else 'js-index_#' }} [ pt-3 ]">
+							<a href="{{ url_for('park', id=park.id) }}">{{ park.name }}</a>
+							{%- for exhibition in park.exhibitions -%}
+								{{ " (" if loop.first }}<a href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a>{{ " / " if not loop.last else ")" }}
+							{%- endfor -%}
+						</h3>
+					{%- else -%}
+						<p><i>There are no parks in the database.</i></p>
+					{%- endfor -%}
+				</div>
 
 			</div>
 		</div>
