--- a/app/templates/artists.html
+++ b/app/templates/artists.html
@@ -46,7 +46,7 @@
 					<h2 class="[ pt-3 ]"><a href="{{ url_for('artist', id=artist.id) }}">{{ artist.name }}</a></h2>
 					<ul class="[ list-unstyled p-0 ]">
 						<li>Artworks:
-							<ul>
+							<ul class="[ list-unstyled pl-4 ]">
 
 								{% for artwork in artist.artworks %}
 									<li><a href="{{ url_for('artwork', id=artwork.id) }}">{{ artwork.name }}</a></li>
