Import state, transitions, loading, plural

--- a/app/static/style/src/style.scss
+++ b/app/static/style/src/style.scss
@@ -8,3 +8,6 @@
 @import '/base/forms';
 @import '/base/layout';
 @import '/base/state';
+@import '/base/transitions';
+@import '/base/loading';
+@import '/base/plural';
