Add .js-internal to links

--- a/app/templates/include/nav-links.html
+++ b/app/templates/include/nav-links.html
@@ -1,25 +1,41 @@
 <div class="site-nav__link [ dropdown-item ]">
-  <a href="{{ url_for('home') }}"><span class="site-nav__link-text">Home</span></a>
+  <a class="js-internal" href="{{ url_for('home') }}">
+    <span class="site-nav__link-text">Home</span>
+  </a>
 </div>
 <div class="site-nav__link [ dropdown-item ]">
-  <a href="{{ url_for('exhibitions') }}"><span class="site-nav__link-text">Exhibitions</span></a>
+  <a class="js-internal" href="{{ url_for('exhibitions') }}">
+    <span class="site-nav__link-text">Exhibitions</span>
+  </a>
 </div>
 <div class="site-nav__link [ dropdown-item ]">
-  <a href="{{ url_for('parks') }}"><span class="site-nav__link-text">Parks</span></a>
+  <a class="js-internal" href="{{ url_for('parks') }}">
+    <span class="site-nav__link-text">Parks</span>
+  </a>
 </div>
 <div class="site-nav__link [ dropdown-item ]">
-  <a href="{{ url_for('artists') }}"><span class="site-nav__link-text">Artists</span></a>
+  <a class="js-internal" href="{{ url_for('artists') }}">
+    <span class="site-nav__link-text">Artists</span>
+  </a>
 </div>
 <div class="site-nav__link [ dropdown-item ]">
-  <a href="{{ url_for('artworks') }}"><span class="site-nav__link-text">Artworks</span></a>
+  <a class="js-internal" href="{{ url_for('artworks') }}">
+    <span class="site-nav__link-text">Artworks</span>
+  </a>
 </div>
 <div class="site-nav__link [ dropdown-item ]">
-  <a href="{{ url_for('orgs') }}"><span class="site-nav__link-text">Orgs</span></a>
+  <a class="js-internal" href="{{ url_for('orgs') }}">
+    <span class="site-nav__link-text">Orgs</span>
+  </a>
 </div>
 <div class="[ pt-4 ]"></div>
 <div class="site-nav__link [ dropdown-item ]">
-  <a href="{{ url_for('import_file') }}"><span class="site-nav__link-text">Import</span></a>
+  <a class="js-internal" href="{{ url_for('import_file') }}">
+    <span class="site-nav__link-text">Import</span>
+  </a>
 </div>
 <div class="site-nav__link [ dropdown-item ]">
-  <a href="{{ url_for('create') }}"><span class="site-nav__link-text">Create</span></a>
+  <a class="js-internal" href="{{ url_for('create') }}">
+    <span class="site-nav__link-text">Create</span>
+  </a>
 </div>
