Add link to parks page for guests

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -83,6 +83,8 @@
 			</div>
 		</section>
 
+		<p class="[ text-center ]">Just browsing? Head <a href="{{ url_for('parks') }}">here</a>.</p>
+
 	</form>
 
 </div>
