--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -6,6 +6,8 @@
 {% block title %}NYC Parks Database – {{ exhibition.name|capitalize }}{% endblock %}
 {% block content %}
 
+{% include "include/loading.html" %}
+
 <div class="container-fluid">
 
 	<section id="section--head">
