Add main.bundle.js ref

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,6 +20,8 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
 
+    <script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Hind:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i" rel="stylesheet">
 
